--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.4.4",
+    "axios": "^1.4.0",
+    "jsdom": "^22.0.0",
     "next": "13.4.2",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xmldom": "^0.6.0"
   }
 }
